# dste

./: .gitignore  Makefile  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml
.github/workflows/: ruff-ci.yml
data/processed/: .gitignore  predictions.csv  preprocess_model.pkl
docker/: Dockerfile
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EDA.ipynb  Untitled.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-0/learn/: events.out.tfevents
notebooks/catboost_info/fold-0/test/: events.out.tfevents
notebooks/catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-1/learn/: events.out.tfevents
notebooks/catboost_info/fold-1/test/: events.out.tfevents
notebooks/catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-2/learn/: events.out.tfevents
notebooks/catboost_info/fold-2/test/: events.out.tfevents
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
notebooks/catboost_info/tmp/: cat_feature_index.ba811019-8b5faa03-5fa885a2-5090bf85.tmp
src/: __init__.py  request.py  server.py
src/data/: preprocess.py  preprocess_.py
src/model/: predict.py  train.py  train_.py
