[tool.poetry]
name = "dste"
version = "0.1.0"
description = ""
authors = ["pavel.kokin <pavel.data@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
catboost = "^1.2.7"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
category-encoders = "^2.8.0"
optuna = "^4.2.1"
dvc = "^3.59.0"
click = "^8.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
